# mqtt_neural_cameras

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.yaml  main.cpp  main_old_method.cpp  main_unoptimized.cpp  options.json  slugify.hpp  start_mqtt_neural_cameras.sh  start_neural_security_system.sh
omz_includes/common/: source.txt
omz_includes/common/utils/src/: images_capture.cpp
omz_includes/multi_channel_common/: source.txt
